// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Slider Snapshots No props 1`] = `
<div
  className="sc-dlfnbm jQQXla"
>
  <div
    className="sc-hKgILt cNgtla"
    style={Object {}}
  >
    <div
      className="sc-eCssSg fXBLJQ"
      onMouseDown={[Function]}
      onTouchStart={[Function]}
    />
    <div
      className="slider-handles"
    >
      <button
        aria-valuemax={100}
        aria-valuemin={0}
        aria-valuenow={0}
        className="sc-bdfBwQ dMvusR sc-jSgupP fbijvz"
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        onTouchStart={[Function]}
        role="slider"
        tabIndex={0}
        type="button"
      />
    </div>
    <div
      className="sc-gKsewC eoWRga"
    >
      <div
        className="sc-gsTCUz XesgK"
        onMouseDown={[Function]}
        onTouchStart={[Function]}
        target={
          Object {
            "id": "$$-0",
            "percent": 0,
            "value": 0,
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`Slider Snapshots className 1`] = `
<div
  className="sc-dlfnbm jQQXla"
>
  <div
    className="sc-hKgILt cNgtla Slider"
    style={Object {}}
  >
    <div
      className="sc-eCssSg fXBLJQ"
      onMouseDown={[Function]}
      onTouchStart={[Function]}
    />
    <div
      className="slider-handles"
    >
      <button
        aria-valuemax={100}
        aria-valuemin={0}
        aria-valuenow={NaN}
        className="sc-bdfBwQ fHavKc sc-jSgupP fbijvz"
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        onTouchStart={[Function]}
        role="slider"
        tabIndex={0}
        type="button"
      />
    </div>
    <div
      className="sc-gKsewC eoWRga"
    >
      <div
        className="sc-gsTCUz bJfODj"
        onMouseDown={[Function]}
        onTouchStart={[Function]}
        target={
          Object {
            "id": "$$-0",
            "percent": NaN,
            "value": NaN,
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`Slider Snapshots max 1`] = `
<div
  className="sc-dlfnbm jQQXla"
>
  <div
    className="sc-hKgILt cNgtla"
    style={Object {}}
  >
    <div
      className="sc-eCssSg fXBLJQ"
      onMouseDown={[Function]}
      onTouchStart={[Function]}
    />
    <div
      className="slider-handles"
    >
      <button
        aria-valuemax={100}
        aria-valuemin={0}
        aria-valuenow={0}
        className="sc-bdfBwQ dMvusR sc-jSgupP fbijvz"
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        onTouchStart={[Function]}
        role="slider"
        tabIndex={0}
        type="button"
      />
    </div>
    <div
      className="sc-gKsewC eoWRga"
    >
      <div
        className="sc-gsTCUz XesgK"
        onMouseDown={[Function]}
        onTouchStart={[Function]}
        target={
          Object {
            "id": "$$-0",
            "percent": 0,
            "value": 0,
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`Slider Snapshots min 1`] = `
<div
  className="sc-dlfnbm jQQXla"
>
  <div
    className="sc-hKgILt cNgtla"
    style={Object {}}
  >
    <div
      className="sc-eCssSg fXBLJQ"
      onMouseDown={[Function]}
      onTouchStart={[Function]}
    />
    <div
      className="slider-handles"
    >
      <button
        aria-valuemax={100}
        aria-valuemin={0}
        aria-valuenow={0}
        className="sc-bdfBwQ dMvusR sc-jSgupP fbijvz"
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        onTouchStart={[Function]}
        role="slider"
        tabIndex={0}
        type="button"
      />
    </div>
    <div
      className="sc-gKsewC eoWRga"
    >
      <div
        className="sc-gsTCUz XesgK"
        onMouseDown={[Function]}
        onTouchStart={[Function]}
        target={
          Object {
            "id": "$$-0",
            "percent": 0,
            "value": 0,
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`Slider Snapshots step 1`] = `
<div
  className="sc-dlfnbm jQQXla"
>
  <div
    className="sc-hKgILt cNgtla"
    style={Object {}}
  >
    <div
      className="sc-eCssSg fXBLJQ"
      onMouseDown={[Function]}
      onTouchStart={[Function]}
    />
    <div
      className="slider-handles"
    >
      <button
        aria-valuemax={100}
        aria-valuemin={0}
        aria-valuenow={0}
        className="sc-bdfBwQ dMvusR sc-jSgupP fbijvz"
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        onTouchStart={[Function]}
        role="slider"
        tabIndex={0}
        type="button"
      />
    </div>
    <div
      className="sc-gKsewC eoWRga"
    >
      <div
        className="sc-gsTCUz XesgK"
        onMouseDown={[Function]}
        onTouchStart={[Function]}
        target={
          Object {
            "id": "$$-0",
            "percent": 0,
            "value": 0,
          }
        }
      />
    </div>
  </div>
</div>
`;

exports[`Slider Snapshots step 2`] = `
<div
  className="sc-dlfnbm jQQXla"
>
  <div
    className="sc-hKgILt cNgtla Slider"
    style={Object {}}
  >
    <div
      className="sc-eCssSg fXBLJQ"
      onMouseDown={[Function]}
      onTouchStart={[Function]}
    />
    <div
      className="slider-handles"
    >
      <button
        aria-valuemax={100}
        aria-valuemin={0}
        aria-valuenow={0}
        className="sc-bdfBwQ dMvusR sc-jSgupP fbijvz"
        onKeyDown={[Function]}
        onMouseDown={[Function]}
        onTouchStart={[Function]}
        role="slider"
        tabIndex={0}
        type="button"
      />
    </div>
    <div
      className="sc-gKsewC eoWRga"
    >
      <div
        className="sc-gsTCUz XesgK"
        onMouseDown={[Function]}
        onTouchStart={[Function]}
        target={
          Object {
            "id": "$$-0",
            "percent": 0,
            "value": 0,
          }
        }
      />
    </div>
  </div>
</div>
`;
